[gd_scene load_steps=25 format=3 uid="uid://bs5nnwqfnmq1r"]

[ext_resource type="Script" path="res://main.gd" id="1_4uexl"]
[ext_resource type="PackedScene" uid="uid://c7dqd42widogo" path="res://part_button.tscn" id="2_e0a2e"]
[ext_resource type="Material" uid="uid://c4611e543kkk6" path="res://character_sm.tres" id="2_jcdd0"]
[ext_resource type="Texture2D" uid="uid://dhqmyk14y47cy" path="res://palettes/skin_light.png" id="13_uus2i"]
[ext_resource type="Texture2D" uid="uid://dy0lop3goy0ur" path="res://palettes/eye_blue.png" id="14_ardgb"]
[ext_resource type="Texture2D" uid="uid://d4cttqkg6c8fp" path="res://palettes/hair_orange.png" id="15_vjhub"]
[ext_resource type="Texture2D" uid="uid://bd0nig1wwp235" path="res://palettes/clothes_base_blue.png" id="16_0rtli"]
[ext_resource type="Texture2D" uid="uid://1f01mloty2ko" path="res://palettes/skin_med.png" id="16_tuorf"]
[ext_resource type="Texture2D" uid="uid://dd753kyajur35" path="res://palettes/clothes_accessory_brown.png" id="17_n24g6"]
[ext_resource type="Texture2D" uid="uid://1yw8dcnkxmba" path="res://palettes/skin_dark.png" id="17_ptuxw"]
[ext_resource type="Texture2D" uid="uid://d3225y3b4t12q" path="res://palettes/clothes_trim_white.png" id="18_pruut"]
[ext_resource type="Texture2D" uid="uid://dlobw10sql3s7" path="res://palettes/eye_brown.png" id="19_j2r1o"]
[ext_resource type="Texture2D" uid="uid://dyosvslps3dio" path="res://palettes/eye_green.png" id="20_nrr61"]
[ext_resource type="Texture2D" uid="uid://bp6maowxjaqfk" path="res://palettes/eye_black.png" id="21_dkudm"]
[ext_resource type="Texture2D" uid="uid://bjvocc4jaf028" path="res://palettes/hair_blonde.png" id="23_801it"]
[ext_resource type="Texture2D" uid="uid://3vc6cduxpxhb" path="res://palettes/hair_brown.png" id="24_alyt7"]
[ext_resource type="Texture2D" uid="uid://cqneyb3vwg5fj" path="res://palettes/hair_black.png" id="25_eijun"]
[ext_resource type="Texture2D" uid="uid://bgurmdws06gtn" path="res://palettes/clothes_base_gray.png" id="27_rb3ma"]
[ext_resource type="Texture2D" uid="uid://bdjt11p7cone8" path="res://palettes/clothes_base_green.png" id="28_rludn"]
[ext_resource type="Texture2D" uid="uid://dbg4a5uedqgiv" path="res://palettes/clothes_acc_green.png" id="30_x2wsk"]
[ext_resource type="Texture2D" uid="uid://v2s2x0q2vid5" path="res://palettes/clothes_acc_white.png" id="31_agvlh"]
[ext_resource type="Texture2D" uid="uid://dti3j7rf4jfky" path="res://palettes/clothes_trim_gold.png" id="33_ow4xr"]
[ext_resource type="Texture2D" uid="uid://f3jo1ae55jp1" path="res://palettes/clothes_trim_pink.png" id="34_qc1pm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_djmuq"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4uexl")
PartButton = ExtResource("2_e0a2e")
metadata/_edit_lock_ = true

[node name="Character" type="Node2D" parent="."]
position = Vector2(480, 270)
scale = Vector2(8, 8)
metadata/_edit_lock_ = true

[node name="HairBack" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="Cape" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="Body" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="Head" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="LegLeft" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="LegRight" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="Skirt" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="ArmLeft" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="ArmRight" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="HairFront" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="Face" type="AnimatedSprite2D" parent="Character"]
material = ExtResource("2_jcdd0")
sprite_frames = SubResource("SpriteFrames_djmuq")
metadata/_edit_lock_ = true

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Left" type="PanelContainer" parent="HBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBox/Left"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="AngleLabel" type="Label" parent="HBox/Left/VBox"]
layout_mode = 2
text = "Angle"

[node name="AngleOption" type="OptionButton" parent="HBox/Left/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimLabel" type="Label" parent="HBox/Left/VBox"]
layout_mode = 2
text = "Animation"

[node name="AnimOption" type="OptionButton" parent="HBox/Left/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="PartLabel" type="Label" parent="HBox/Left/VBox"]
layout_mode = 2
text = "Part"

[node name="PartOption" type="OptionButton" parent="HBox/Left/VBox"]
layout_mode = 2
size_flags_vertical = 0
item_count = 12
selected = 0
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "Head"
popup/item_1/id = 1
popup/item_2/text = "Body"
popup/item_2/id = 2
popup/item_3/text = "Arm Left"
popup/item_3/id = 3
popup/item_4/text = "Arm Right"
popup/item_4/id = 4
popup/item_5/text = "Leg Left"
popup/item_5/id = 5
popup/item_6/text = "Leg Right"
popup/item_6/id = 6
popup/item_7/text = "Hair Front"
popup/item_7/id = 7
popup/item_8/text = "Hair Back"
popup/item_8/id = 8
popup/item_9/text = "Skirt"
popup/item_9/id = 9
popup/item_10/text = "Cape"
popup/item_10/id = 10
popup/item_11/text = "Face"
popup/item_11/id = 11

[node name="Scrolls" type="PanelContainer" parent="HBox/Left/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="All" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/All"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Head" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/Head"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArmLeft" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/ArmLeft"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArmRight" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/ArmRight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LegLeft" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/LegLeft"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LegRight" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/LegRight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HairFront" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/HairFront"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HairBack" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/HairBack"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Skirt" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/Skirt"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cape" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/Cape"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Face" type="ScrollContainer" parent="HBox/Left/VBox/Scrolls"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="HBox/Left/VBox/Scrolls/Face"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="PanelContainer" parent="HBox"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="HBox/Right"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="HBox/Right/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SkinLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Skin Color"

[node name="SkinOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Light"
popup/item_0/icon = ExtResource("13_uus2i")
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/icon = ExtResource("16_tuorf")
popup/item_1/id = 1
popup/item_2/text = "Dark"
popup/item_2/icon = ExtResource("17_ptuxw")
popup/item_2/id = 2

[node name="EyeLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Eye Color"

[node name="EyeOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Blue"
popup/item_0/icon = ExtResource("14_ardgb")
popup/item_0/id = 0
popup/item_1/text = "Brown"
popup/item_1/icon = ExtResource("19_j2r1o")
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/icon = ExtResource("20_nrr61")
popup/item_2/id = 2
popup/item_3/text = "Black"
popup/item_3/icon = ExtResource("21_dkudm")
popup/item_3/id = 3

[node name="HairLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Hair Color"

[node name="HairOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Orange"
popup/item_0/icon = ExtResource("15_vjhub")
popup/item_0/id = 0
popup/item_1/text = "Blonde"
popup/item_1/icon = ExtResource("23_801it")
popup/item_1/id = 1
popup/item_2/text = "Brown"
popup/item_2/icon = ExtResource("24_alyt7")
popup/item_2/id = 2
popup/item_3/text = "Black"
popup/item_3/icon = ExtResource("25_eijun")
popup/item_3/id = 3

[node name="CBaseLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Clothes Base Color"

[node name="CBOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Blue"
popup/item_0/icon = ExtResource("16_0rtli")
popup/item_0/id = 0
popup/item_1/text = "Gray"
popup/item_1/icon = ExtResource("27_rb3ma")
popup/item_1/id = 1
popup/item_2/text = "Green"
popup/item_2/icon = ExtResource("28_rludn")
popup/item_2/id = 2

[node name="CAccLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Clothes Accessory Color"

[node name="CAccOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Brown"
popup/item_0/icon = ExtResource("17_n24g6")
popup/item_0/id = 0
popup/item_1/text = "Green"
popup/item_1/icon = ExtResource("30_x2wsk")
popup/item_1/id = 1
popup/item_2/text = "White"
popup/item_2/icon = ExtResource("31_agvlh")
popup/item_2/id = 2

[node name="CTrimLabel" type="Label" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Clothes Trim Color"

[node name="CTrimOption" type="OptionButton" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "White"
popup/item_0/icon = ExtResource("18_pruut")
popup/item_0/id = 0
popup/item_1/text = "Gold"
popup/item_1/icon = ExtResource("33_ow4xr")
popup/item_1/id = 1
popup/item_2/text = "Pink"
popup/item_2/icon = ExtResource("34_qc1pm")
popup/item_2/id = 2

[node name="Custom" type="Button" parent="HBox/Right/Scroll/VBox"]
layout_mode = 2
text = "Set Custom Colors"

[node name="CC" type="PopupPanel" parent="."]
size = Vector2i(480, 270)
unresizable = false
borderless = false

[node name="Scroll" type="ScrollContainer" parent="CC"]
offset_left = 4.0
offset_top = 4.0
offset_right = 476.0
offset_bottom = 266.0

[node name="VBox" type="VBoxContainer" parent="CC/Scroll"]
layout_mode = 2

[node name="SkinLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Skin Color"

[node name="SkinMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/SkinMarg"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CC/Scroll/VBox/SkinMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/SkinMarg/Colors/Light"]
layout_mode = 2
text = "Light"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/SkinMarg/Colors/Light"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/SkinMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/SkinMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/SkinMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/SkinMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/SkinMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/SkinMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="EyeLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Eye Color"

[node name="EyeMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/EyeMarg"]
layout_mode = 2

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/EyeMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/EyeMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/EyeMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/EyeMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/EyeMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/EyeMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="HairLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Hair Color"

[node name="HairMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/HairMarg"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CC/Scroll/VBox/HairMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/HairMarg/Colors/Light"]
layout_mode = 2
text = "Light"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/HairMarg/Colors/Light"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/HairMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/HairMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/HairMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/HairMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/HairMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/HairMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="CBLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Clothes Base Color"

[node name="CBMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/CBMarg"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CC/Scroll/VBox/CBMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CBMarg/Colors/Light"]
layout_mode = 2
text = "Light"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CBMarg/Colors/Light"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/CBMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CBMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CBMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/CBMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CBMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CBMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="CAccLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Clothes Accessory Color"

[node name="CAccMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/CAccMarg"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CC/Scroll/VBox/CAccMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CAccMarg/Colors/Light"]
layout_mode = 2
text = "Light"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CAccMarg/Colors/Light"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/CAccMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CAccMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CAccMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/CAccMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CAccMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CAccMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="CTrimLabel" type="Label" parent="CC/Scroll/VBox"]
layout_mode = 2
text = "Clothes Trim Color"

[node name="CTrimMarg" type="MarginContainer" parent="CC/Scroll/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Colors" type="VBoxContainer" parent="CC/Scroll/VBox/CTrimMarg"]
layout_mode = 2

[node name="Light" type="HBoxContainer" parent="CC/Scroll/VBox/CTrimMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CTrimMarg/Colors/Light"]
layout_mode = 2
text = "Light"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CTrimMarg/Colors/Light"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Med" type="HBoxContainer" parent="CC/Scroll/VBox/CTrimMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CTrimMarg/Colors/Med"]
layout_mode = 2
text = "Medium"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CTrimMarg/Colors/Med"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="Dark" type="HBoxContainer" parent="CC/Scroll/VBox/CTrimMarg/Colors"]
layout_mode = 2

[node name="Label" type="Label" parent="CC/Scroll/VBox/CTrimMarg/Colors/Dark"]
layout_mode = 2
text = "Dark"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CC/Scroll/VBox/CTrimMarg/Colors/Dark"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[connection signal="item_selected" from="HBox/Left/VBox/AngleOption" to="." method="_on_angle_option_item_selected"]
[connection signal="item_selected" from="HBox/Left/VBox/AnimOption" to="." method="_on_anim_option_item_selected"]
[connection signal="item_selected" from="HBox/Left/VBox/PartOption" to="." method="_on_part_option_item_selected"]
[connection signal="pressed" from="HBox/Right/Scroll/VBox/Custom" to="." method="_on_custom_pressed"]
